Refactored and add mstock ltp